# django-auth

./: db.sqlite3  hello.py  pyproject.toml
app/: settings.py  urls.py
my_auth/: forms.py  urls.py  views.py
my_auth/templates/accounts/: home.html  login.html  register.html
