[project]
name = "django-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-widget-tweaks>=1.5.0",
]

[tool.uv.sources]
django = { git = "https://github.com/django/django.git", tag = "4.2.15" }
